bdr.BDR.scala.error
Erreur de compilation :
BDR:1: error: not found: value R
if (estSurMessage()==R) {
                     ^BDR:5: error: not found: value L
if (estSurMessage()==L) {
                     ^BDR:9: error: not found: value I
if (estSurMessage()==I) {
                     ^BDR:13: error: not found: value A
if (estSurMessage()==A) {
                     ^BDR:16: error: not found: value B
if (estSurMessage()==B) {
                     ^BDR:19: error: not found: value C
if (estSurMessage()==C) {
                     ^BDR:22: error: not found: value Z
if (estSurMessage()==Z) {
                     ^